# WazirxTrader

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.sh
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature-request.yml
dev/: init.sh  setup.sh
docs/: installation.rst
requirements/: base.txt  dev.txt
src/trade/: base.py  coins.py  database.py  exception.py  market_data.py  order.py  quantity.py  symbol.py  user.py
src/trade/strategy/: collect_info.py  log.py  spread_trading.py
src/wazirx/rest/: __init__.py  client.py  test.py
src/wazirx/websocket/: __init__.py  test.py  websocket_client.py
