[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wazir_trader"
version = "0.1"
authors = [
  { name="Amit Das", email="mramitdas99@gmail.com" }
]
maintainers = [
{ name="Amit Das", email="mramitdas99@gmail.com" }
]
keywords=['wazirx', 'wazirxtrader', 'wazirx_trader', 'wazirx-trader','Trade', 'trade']
description='An Api based approach to excute trades in async manner.'
# readme = "README.rst"
requires-python = ">=3.10.5"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: No License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests==2.28.2",
    "websockets==10.4"
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wazirx.rest" = ["*.json"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "autopep8"
]

[project.urls]
"Homepage" = "https://github.com/mramitdas/wazirx_trader"
"Bug Tracker" = "https://github.com/mramitdas/wazirx_trader/issues"